--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <h3>Vayam</h3>
                 <span>App Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/vayam.jpg">
+              <img class="img-fluid" src="assets/img/Vayam.jpg">
             </a>
           </div>
           <div class="item ui col-sm-6 col-md-4 col-lg-4 mb-4">
