--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
   <div class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/Book-13.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Book-13.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item ">
-      <img src="assets/img/Book-15.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy"  src="assets/img/Book-15.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Book-19.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Book-19.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Book-20.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Book-20.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Book-23.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Book-23.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Book-27.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Book-27.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -105,34 +105,34 @@
   <div  class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/Pots.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Pots.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item ">
-      <img src="assets/img/Watch.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Watch.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Street.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Street.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Xbox.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Xbox.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Pawn.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Pawn.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/AC.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/AC.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Controller.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Controller.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Gameboy.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Gameboy.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Speaker1.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Speaker1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/Speaker2.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/Speaker2.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -151,7 +151,7 @@
   <div class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/img_3.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/img_3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   </div>
@@ -161,16 +161,16 @@
   <div  class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/silence (1).jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/silence (1).jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item ">
-      <img src="assets/img/silence (2).jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/silence (2).jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/silence (3).jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/silence (3).jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/img/silence (4).jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/silence (4).jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -188,13 +188,13 @@
   <div  class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div id = "car5-1"class="carousel-item active" >
-      <img src="assets/img/traditional.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/traditional.jpg" class="d-block w-100" alt="...">
     </div>
     <div id = "car5-2" class="carousel-item ">
-      <img src="assets/img/modern.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/modern.jpg" class="d-block w-100" alt="...">
     </div>
     <div id = "car5-3" class="carousel-item">
-      <img src="assets/img/experimental.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/experimental.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -212,7 +212,7 @@
   <div  class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/img_7_full.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/img_7_full.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   </div>
@@ -222,7 +222,7 @@
   <div  class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" >
-      <img src="assets/img/img_8_full.jpg" class="d-block w-100" alt="...">
+      <img loading = "lazy" src="assets/img/img_8_full.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   </div>
