--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div class="container">
         <div class="row mb-5 align-items-end">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2 class = "intro">Hi, I am Lakshya Ranwan</h2>
+            <h2 class = "intro">Hi, I am Lakshya</h2>
             <p class="mb-0 subintro">UI/UX Design & Development sprinkled with data visualisation and analysis</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
