--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <img class="img-fluid" src="assets/img/mpari.jpg">
             </a>
           </div>
-          <div class="item vc col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item ui col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href = "https://www.behance.net/gallery/128567343/How-people-like-you-spend-their-time" target = "_blank" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>How people like you spend their time</h3>
