--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <a href = "https://www.behance.net/gallery/128550489/Vayam-Diet-Fitness-App" target = "_blank" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Vayam</h3>
-                <span>App Design</span>
+                <span>User Experience and Research</span>
               </div>
               <img class="img-fluid" src="assets/img/Vayam.jpg">
             </a>
