--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <a href = "https://www.behance.net/gallery/128574419/Dash" target = "_blank" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Dash App</h3>
-                <span>UI/UX Concept</span>
+                <span>UI Design</span>
               </div>
               <img class="img-fluid" src="assets/img/dash.jpg">
             </a>
