--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <a href = "https://www.behance.net/gallery/128550489/Vayam-Diet-Fitness-App" target = "_blank" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Vayam</h3>
-                <span>User Experience and Research</span>
+                <span>UI/UX and Research</span>
               </div>
               <img class="img-fluid" src="assets/img/Vayam.jpg">
             </a>
@@ -295,7 +295,7 @@
             <a href = "https://www.behance.net/gallery/128568059/The-Taskmaster-Illustrated-Book" target = "_blank" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>The Taskmaster</h3>
-                <span>Illustrated Book</span>
+                <span>Illustration and Storytelling</span>
               </div>
               <img class="img-fluid" src="assets/img/taskmaster.jpg">
             </a>
@@ -313,7 +313,7 @@
             <a id = "bcar1"class="item-wrap fancybox">
               <div class="work-info">
                 <h3>A Food Guide</h3>
-                <span>Illustrated Book</span>
+                <span>Illustration and Storytelling</span>
               </div>
               <img class="img-fluid" src="assets/img/img_1.jpg">
             </a>
@@ -322,7 +322,7 @@
             <a id = "bcar3" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Stay Hydrated!</h3>
-                <span>Poster</span>
+                <span>Graphic Design</span>
               </div>
               <img class="img-fluid" src="assets/img/img_3.jpg">
             </a>
@@ -331,7 +331,7 @@
             <a id = "bcar4" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>The Silence</h3>
-                <span>Illustrated Book</span>
+                <span>Illustration and Storytelling</span>
               </div>
               <img class="img-fluid" src="assets/img/img_4.jpg">
             </a>
@@ -340,7 +340,7 @@
             <a id = "bcar2" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>3D Renders</h3>
-                <span>3D</span>
+                <span>Modelling, texturing <br> and rendering</span>
               </div>
               <img class="img-fluid" src="assets/img/img_2.jpg">
             </a>
