--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
         <li class="nav-item nav-item-last">
           <a class="nav-link" href="assets/resume.pdf" target="_blank">Resume</a>
         </li>
-
+        <li class="nav-item">
+          <div id="LI_9">
+              <a href="https://www.behance.net/lakshyaranwan/" target = "_blank" id="A_1"><i id="I_2"><i class="fa fa-behance" aria-hidden="true"></i></i></a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <div id="LI_9">
+              <a href="mailto:19U130030@iitb.ac.in" target = "_blank" id="A_1"><i id="I_2"><span class="fa fa-envelope"></i></a>
+          </div>
+        </li>
 
 
 
