--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         </li>
         <li class="nav-item">
           <div id="LI_9">
+              <a href="https://www.linkedin.com/in/lakshya-ranwan/" target = "_blank" id="A_1"><i id="I_2"><i class="fa fa-linkedin" aria-hidden="true"></i></i></a>
+          </div>
+          <div id="LI_9">
               <a href="https://www.behance.net/lakshyaranwan/" target = "_blank" id="A_1"><i id="I_2"><i class="fa fa-behance" aria-hidden="true"></i></i></a>
           </div>
         </li>
@@ -252,7 +255,7 @@
         <div class="row mb-5 align-items-end">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
             <h2 class = "intro">Hi, I am Lakshya</h2>
-            <p class="mb-0 subintro">UI/UX Design & Development sprinkled with data visualisation and analysis<br>UX Designer at Oracle'22</p>
+            <p class="mb-0 subintro">UI/UX Design & Development sprinkled with data visualisation and analysis<br>Incoming UX Research Intern at Oracle'22</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
@@ -374,7 +377,7 @@
 
           <div class="col-md-7 mb-5 mb-md-0 pic" data-aos="fade-up">
             <p><img src="assets/img/person_1_sq.jpg" alt="Image" class="img-fluid profilepic"></p>
-            <p>I am Lakshya Ranwan, a third year B.Des student from IDC School of Design, IIT Bombay.<br> I am also a B.Sc freshie at IIT Madras, pursuing their online data science degree. <br> I enjoy creating, embrace technology and believe in the cross-over of disciplines to solve complex problems.</p>
+            <p>I am Lakshya Ranwan, a fourth year B.Des student from IDC School of Design, IIT Bombay.<br> I will be converting to dual degree and be pursuing M.Des here at IIT Bombay. <br> I enjoy creating, embrace technology and believe in the cross-over of disciplines to solve complex problems.</p>
             <p>Apart from work and academics, I enjoy spending my time playing football, producing music, running a youtube channel and playing video games.</p>
           </div>
 
@@ -393,6 +396,7 @@
 
         </div>
         <div class="col-sm-6 social text-md-end">
+          <a href="https://www.linkedin.com/in/lakshya-ranwan/" target = "_blank"><span class="fa fa-linkedin"></span></a>
           <a href="https://www.behance.net/lakshyaranwan" target = "_blank"><span class="fa fa-behance"></span></a>
           <a href="mailto:19U130030@iitb.ac.in" target = "_blank"><span class="fa fa-envelope"></span></a>
         </div>
